<resources>
    <string name="app_name">Mod2_Class1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="hintCorreo">Correo</string>
    <string name="hintContrasenia">Contraseña</string>
    <string name="recordarContrasenia">Recordar Contraseña</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="registro">Registro</string>
</resources>
